Fix scrollbar issue - change wrapper width from 100vw to 100%
100vw includes scrollbar width which causes layout shifts

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ h1 {
 }
 
 .wrapper {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
